flight file format v6
- remove unused things from header (vehicle model, player name)
- add flags in header:
  - canary (to know if the mission start packet was received)
  - has_bank_and_pitch (because not all flights have this data)
  - has_altitude (because it's bogus data on some flights)
- use fuel value [0-1] so the fuel capacity doesn't matter anymore

Also update flighttracker (packets)